--- a/softdevfinals/templates/nav_admin.html
+++ b/softdevfinals/templates/nav_admin.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Admin Panel</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/nav.css' %}">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg sticky-top">
         <div class="text-center mb-4"></div>
-        <a class="navbar-brand" href="{% url 'home' %}">
-            <img src="{% static 'css/logo.png' %}" alt="Logo" class="logo" /> Share Mo Lang
-        </a>
+        <img src="{% static 'css/logo.png' %}" alt="Logo" class="logo" />
+        <a class="nav-link" href="{% url 'home' %}">Share Mo Lang</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,7 +27,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'recipe-create' %}">Create New Recipe</a>
                 </li>
-  
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'user-list' %}">User List</a> <!-- New button for user list -->
+                </li>
                 <li class="nav-item">
                     <a class="nav-link text-danger" href="{% url 'logout' %}">Logout</a>
                 </li>
@@ -36,7 +37,7 @@
         </div>
     </nav>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
